--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src/main/resources"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -47,5 +47,6 @@
 	<classpathentry kind="lib" path="C:/Users/User/Downloads/poi-bin-5.0.0-20210120/poi-5.0.0/auxiliary/xml-apis-ext-1.3.04.jar"/>
 	<classpathentry kind="lib" path="C:/Users/User/Downloads/poi-bin-5.0.0-20210120/poi-5.0.0/auxiliary/xmlgraphics-commons-2.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/User/Downloads/poi-bin-5.0.0-20210120/poi-5.0.0/auxiliary/xmlsec-2.2.1.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
